[gd_scene load_steps=13 format=3 uid="uid://cexhlinwbroje"]

[ext_resource type="Script" uid="uid://cyo4a01yy5e3o" path="res://scenes/hutan kata/Change Round/change_round.gd" id="1_c4tgm"]
[ext_resource type="Texture2D" uid="uid://u4y234q5vce0" path="res://assets/Star/Starbox main star.webp" id="2_24xi7"]
[ext_resource type="Texture2D" uid="uid://cgyn8o58nd3l5" path="res://assets/Star/Starbox main shadow.webp" id="3_d5sgh"]
[ext_resource type="Texture2D" uid="uid://08r5oghljqva" path="res://assets/Star/Starbox box 1.webp" id="4_ooftt"]
[ext_resource type="Texture2D" uid="uid://duj18ouiqfpt4" path="res://assets/Progress Bar/Progress bar original.webp" id="5_47t7b"]
[ext_resource type="Texture2D" uid="uid://u7awfk3ua066" path="res://assets/Progress Bar/Progress bar color changing.webp" id="6_sesrq"]
[ext_resource type="Texture2D" uid="uid://mf6ccuo1gj4i" path="res://assets/Ika Duba/Duba original.webp" id="7_jylal"]
[ext_resource type="Texture2D" uid="uid://igtl0766a4ti" path="res://assets/Buttons/Button home.webp" id="8_eja6u"]
[ext_resource type="Texture2D" uid="uid://bkqeiii7cqrik" path="res://assets/Buttons/Button continue.webp" id="9_csn16"]
[ext_resource type="Texture2D" uid="uid://d2euwyav3w2oc" path="res://assets/Buttons/Button refresh.webp" id="10_uyymp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p8bvy"]
texture = ExtResource("4_ooftt")
modulate_color = Color(0.654232, 0.654232, 0.654232, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eja6u"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="ChangeRound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4tgm")
star_on = ExtResource("2_24xi7")
star_off = ExtResource("3_d5sgh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.505882)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_p8bvy")

[node name="Stars" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 150.0
offset_right = 176.0
offset_bottom = 239.0
grow_horizontal = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="Panel/Stars"]
layout_mode = 2
texture = ExtResource("3_d5sgh")
expand_mode = 3

[node name="Star2" type="TextureRect" parent="Panel/Stars"]
layout_mode = 2
texture = ExtResource("3_d5sgh")
expand_mode = 3

[node name="Star3" type="TextureRect" parent="Panel/Stars"]
layout_mode = 2
texture = ExtResource("3_d5sgh")
expand_mode = 3

[node name="ScoreBar" type="TextureProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -49.5
offset_right = 213.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
texture_under = ExtResource("5_47t7b")
texture_progress = ExtResource("6_sesrq")

[node name="Icon" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -213.0
offset_top = 240.0
offset_right = -100.0
offset_bottom = 353.0
grow_horizontal = 2
texture = ExtResource("7_jylal")
expand_mode = 1

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -237.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Home" type="TextureButton" parent="Panel/Buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
texture_normal = ExtResource("8_eja6u")
ignore_texture_size = true
stretch_mode = 0

[node name="Next" type="TextureButton" parent="Panel/Buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
texture_normal = ExtResource("9_csn16")
ignore_texture_size = true
stretch_mode = 0

[node name="Replay" type="TextureButton" parent="Panel/Buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
texture_normal = ExtResource("10_uyymp")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_top = 76.0
offset_right = 72.5
offset_bottom = 99.0
grow_horizontal = 2
text = "Ronde Selanjutnya"
label_settings = SubResource("LabelSettings_eja6u")

[connection signal="pressed" from="Panel/Buttons/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Panel/Buttons/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Panel/Buttons/Replay" to="." method="_on_replay_pressed"]
